parameter acceptance management (#162)
* update riigikogu readme

* update DM call

* added last format message step, specified DM path

* format Step refactor

* added always accepting chatId and userID

* changed parameters input syntax

---------

Co-authored-by: Mati Kljukin <matik@matik-5420.ria.ee>

--- a/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
@@ -10,6 +10,8 @@ declaration:
 
 prepare:
   assign:
+    chatId: ${incoming.body.chatId}
+    authorId: ${incoming.body.authorId}
     today: ${new Date().toISOString().split("T")[0]}
     yearEnd: ${today.split("-")[0] + "-12-31"}
   next: makeApiCall
