--- a/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/find/by-name.yml
@@ -9,7 +9,9 @@ declaration:
 prepare:
   # Assign incoming 'name' parameter to 'searchTerm'
   assign:
-    searchTerm: "${incoming.params.name || 'uusaasta'}"
+    chatId: ${incoming.body.chatId}
+    authorId: ${incoming.body.authorId}
+    searchTerm: "${incoming.body.input}"
   next: makeApiCall
 
 makeApiCall:
@@ -49,7 +51,7 @@ makeApiCall:
 
 filterHolidaysByName:
   assign:
-    filteredHolidays: ${holidayData.response.body.holidays.filter(holiday => holiday.name.toLowerCase().includes(searchTerm.toLowerCase()))}
+    filteredHolidays: ${holidayData.response.body.holidays.filter(holiday => holiday.name.toLowerCase().includes(searchTerm[0].toLowerCase()))}
   next: checkHoliday
 
 checkHoliday:
