--- a/DSL/Ruuter.public/GET/calendar/national-holidays/next.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/next.yml
@@ -10,6 +10,8 @@ declaration:
 
 prepare:
   assign:
+    chatId: ${incoming.body.chatId}
+    authorId: ${incoming.body.authorId}
     today: ${new Date(new Date().setDate(new Date().getDate() + 1)).toISOString().split("T")[0]}
   next: makeApiCall
 
