--- a/DSL/Ruuter.public/GET/calendar/national-holidays/previous.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/previous.yml
@@ -10,6 +10,8 @@ declaration:
 
 prepare:
   assign:
+    chatId: ${incoming.body.chatId}
+    authorId: ${incoming.body.authorId}
     today: ${new Date().toISOString().split("T")[0]}
   next: makeApiCall
 
