--- a/DSL/Ruuter.public/GET/calendar/national-holidays/national-holidays.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/national-holidays.yml
@@ -10,8 +10,8 @@ declaration:
 
 prepare:
   assign:
-    chatId: ${incoming.body.chatId}
-    authorId: ${incoming.body.authorId}
+    chatId: ${incoming.params.chatId}
+    authorId: ${incoming.params.authorId}
   next: makeApiCall
 
 makeApiCall:
