--- a/DSL/Ruuter.public/GET/public-initiatives/most-recent.yml
+++ b/DSL/Ruuter.public/GET/public-initiatives/most-recent.yml
@@ -8,6 +8,8 @@ declaration:
 
 prepareVariables:
   assign:
+    chatId: ${incoming.params.chatId}
+    authorId: ${incoming.params.authorId}
     order: "-occurredAt"
     distinct: "initiativeId"
     limit: "5"
@@ -79,21 +81,36 @@ getFifthEvent:
       Accept: "${initiativeHeader}"
   result: fifthInitiative
   error: returnError
-  next: assignVariables2
+  next: assignVariables
 
-assignVariables2:
+assignVariables:
   assign:
-    first: ${firstInitiative.response.body}
-    second: ${secondInitiative.response.body}
-    third: ${thirdInitiative.response.body}
-    fourth: ${fourthInitiative.response.body}
-    fifth: ${fifthInitiative.response.body}
-  next: returnResult
+    res:
+      first: ${firstInitiative.response.body}
+      second: ${secondInitiative.response.body}
+      third: ${thirdInitiative.response.body}
+      fourth: ${fourthInitiative.response.body}
+      fifth: ${fifthInitiative.response.body}
+  next: formatMessages
 
-returnResult:
-  return: ${[first, second, third, fourth, fifth]}
-  next: end
+formatMessages:
+  call: http.post
+  args:
+    url: "[#DMAPPER]/common-services/hbs/bot_responses_to_messages"
+    headers:
+      type: json
+    body:
+      data:
+        {
+          "botMessages": "${[res]}",
+          "chatId": "${chatId}",
+          "authorId": "${authorId}",
+          "authorFirstName": "",
+          "authorLastName": "",
+          "authorTimestamp": "${new Date().toISOString()}",
+          "created": "${new Date().toISOString()}",
+        }
+  result: formatMessage
 
-returnError:
-  return: "Error: failed to get initiative details."
-  next: end
+return_result:
+  return: ${formatMessage.response.body}
